# ProcessingLargeFiles

./: .gitignore  CMakeLists.txt  InputFile.txt  README.md
FileProcessing/: CMakeLists.txt  FileProcessing.cpp  FileProcessing.h
buildx86/: CMakeCache.txt  Makefile  cmake_install.cmake
buildx86/FileProcessing/: Makefile  cmake_install.cmake
buildx86/src/: Makefile  cmake_install.cmake  src
src/: CMakeLists.txt  InputFile.txt  OutputFile.txt  main.cpp
